[package]
name = "protofish"
version = "0.4.1"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Protofish is a decoder focused on decoding arbitrary protocol buffer messages
with error recovery.
"""
documentation = "https://docs.rs/protofish"
repository = "https://github.com/Rantanen/protofish"
readme = "README.md"


[dependencies]
pest = "2.1"
pest_derive = "2.1"
snafu = "0.6"
bytes = "1.0"
